# C_with_templates

./: .clang-tidy  CMakeLists.txt  README.md  grammar.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
include/: ast.hpp  ast_visualizer.hpp  config.hpp  lexer.hpp  parser.hpp  token.hpp
src/: CMakeLists.txt  ast_printer.cpp  ast_visualizer.cpp  lexer.cpp  parser.cpp
tests/unit/: CMakeLists.txt
tests/unit/lexer/: Basic.cpp  CMakeLists.txt
tests/unit/parser/: Basic.cpp
